--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,7 +2,6 @@
     display: flex;
     align-items: flex-end;
     justify-content: center;
-    height: 474px;
 }
 
 .container>* {
@@ -18,6 +17,7 @@ div {
     background-image: url(../img/maxresdefault.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    height: 100vh;
 }
 
 
